# gleisonstore

./: README.md  db.sqlite3  manage.py  pyproject.toml
gleisonstore/: asgi.py  settings.py  urls.py  views.py  wsgi.py
order/: factories.py
order/migrations/: 0001_initial.py
order/tests/test_viewsets/: test_order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/tests/tests_viewsets/: test_product_viewset.py
