[tool.poetry]
name = "gleisonstore"
version = "0.1.0"
description = "Gleisonstore API"
authors = ["gleison <gleisondeivison3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
factory-boy = "^3.3.0"
django-rest-framework = "^0.1.0"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
